# mcp-example

./: .cruft.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
mcp_example/clients/: client.py  simple_client.py
mcp_example/servers/: __init__.py  server.py
